--- a/src/Lesson_6/styles.css
+++ b/src/Lesson_6/styles.css
@@ -1,9 +1,14 @@
 /* Custom CSS */
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: #4d2d06;
     font-family: Georgia, Times, serif;
-    color: fff;
+    color: #fff;
     text-align: center;
     font-size: 50px;
 }
@@ -17,4 +22,20 @@ body {
 #donkey {
     background: green;
     font-family: Monaco, monospace;
+}
+
+.primary-box {
+    background: #222;
+    color: #eee;
+    font-size: 20px;
+    margin: 0 0 10px;
+    padding: 10px;
+}
+
+.secondary-box {
+    background: #eee;
+    color: #222;
+    font-size: 24px;
+    margin: 0 0 10px;
+    padding: 10px;
 }
