Added HTML elements with descendant selectors and updated CSS styling with custom colors and fonts - 10/30/2024

--- a/src/Lesson_6/styles.css
+++ b/src/Lesson_6/styles.css
@@ -39,3 +39,20 @@ body {
     margin: 0 0 10px;
     padding: 10px;
 }
+
+/* Descendant Selectors */
+.primary-box h2 {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.primary-box p em {
+    color: #32b0ff;
+}
+
+.secondary-box p {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.secondary-box em {
+    color: #fc3fff;
+}
