--- a/src/Lesson_6/styles.css
+++ b/src/Lesson_6/styles.css
@@ -27,17 +27,18 @@ body {
 .primary-box {
     background: #222;
     color: #eee;
-    font-size: 20px;
-    margin: 0 0 10px;
-    padding: 10px;
 }
 
 .secondary-box {
     background: #eee;
     color: #222;
-    font-size: 24px;
-    margin: 0 0 10px;
+}
+
+.inside-box {
+    margin: 20px 0;
     padding: 10px;
+    background: #94efff;
+    color: #555;
 }
 
 /* Descendant Selectors */
@@ -55,4 +56,16 @@ body {
 
 .secondary-box em {
     color: #fc3fff;
+}
+
+/* Grouping Selectors */
+
+.inside-box h3, .inside-box p {
+    font-size: 20px;
+}
+
+.primary-box, .secondary-box {
+    font-size: 24px;
+    margin: 0 0 10px;
+    padding: 10px;
 }
